--- a/download.html
+++ b/download.html
@@ -53,7 +53,7 @@
     <nav class="bg-av-dark border-b border-av-gold/20 sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
-                <div class="flex items-center"><a href="index.html" class="flex items-center gap-3"><img src="img/av-shield-192.png" alt="Arsenal Vault" class="h-10 w-10"><span class="text-av-gold font-display font-bold text-xl">Arsenal Vault</span></a></div>
+                <div class="flex items-center"><a href="index.html" class="flex items-center gap-3"><img src="img/av-logo-new.png" alt="Arsenal Vault" class="h-10"></a></div>
                 <div class="hidden md:flex items-center gap-8">
                     <a href="features.html" class="nav-link text-gray-300 hover:text-av-gold transition font-medium">Features</a>
                     <a href="pricing.html" class="nav-link text-gray-300 hover:text-av-gold transition font-medium">Pricing</a>
@@ -210,7 +210,7 @@
     <footer class="bg-av-dark-light border-t border-av-gold/20 py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col md:flex-row justify-between items-center">
-                <div class="flex items-center gap-3 mb-4 md:mb-0"><img src="img/av-shield-192.png" alt="Arsenal Vault" class="h-8 w-8"><span class="text-av-gold font-display font-bold">Arsenal Vault</span></div>
+                <div class="flex items-center gap-3 mb-4 md:mb-0"><img src="img/av-logo-new.png" alt="Arsenal Vault" class="h-8"></div>
                 <p class="text-gray-500 text-sm">&copy; 2026 Arsenal Vault. All rights reserved.</p>
             </div>
         </div>
