Update logo to new shield emblem across all pages

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
                     <a href="index.html" class="flex items-center gap-3">
-                        <img src="img/av-shield-192.png" alt="Arsenal Vault" class="h-10 w-10">
+                        <img src="img/av-logo-new.png" alt="Arsenal Vault" class="h-10 w-10">
                         <span class="text-av-gold font-display font-bold text-xl">Arsenal Vault</span>
                     </a>
                 </div>
@@ -295,7 +295,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid md:grid-cols-4 gap-10">
                 <div>
-                    <div class="flex items-center gap-3 mb-5"><img src="img/av-shield-192.png" alt="Arsenal Vault" class="h-10 w-10"><span class="text-av-gold font-display font-bold text-lg">Arsenal Vault</span></div>
+                    <div class="flex items-center gap-3 mb-5"><img src="img/av-logo-new.png" alt="Arsenal Vault" class="h-10 w-10"><span class="text-av-gold font-display font-bold text-lg">Arsenal Vault</span></div>
                     <p class="text-gray-400 text-sm leading-relaxed">Professional firearms inventory management with secure cloud access.</p>
                 </div>
                 <div><h4 class="text-white font-semibold mb-5">Product</h4><ul class="space-y-3 text-gray-400 text-sm"><li><a href="features.html" class="hover:text-av-gold transition">Features</a></li><li><a href="pricing.html" class="hover:text-av-gold transition">Pricing</a></li><li><a href="download.html" class="hover:text-av-gold transition">Download</a></li><li><a href="#" class="hover:text-av-gold transition">Documentation</a></li></ul></div>
