Add Home link to nav + ensure logo has Arsenal Vault text on all pages

--- a/legal.html
+++ b/legal.html
@@ -130,7 +130,8 @@
                     </a>
                 </div>
                 <div class="hidden md:flex items-center gap-8">
-                    <a href="features.html"  class="nav-link text-gray-300 hover:text-av-gold transition font-medium">Features</a>
+                    <a href="index.html" class="nav-link text-gray-300 hover:text-av-gold transition font-medium">Home</a>
+                    <a href="features.html" class="nav-link text-gray-300 hover:text-av-gold transition font-medium">Features</a>
                     <a href="pricing.html"   class="nav-link text-gray-300 hover:text-av-gold transition font-medium">Pricing</a>
                     <a href="download.html"  class="nav-link text-gray-300 hover:text-av-gold transition font-medium">Download</a>
                     <a href="support.html"   class="nav-link text-gray-300 hover:text-av-gold transition font-medium">Support</a>
@@ -146,6 +147,7 @@
         <!-- Mobile menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-av-dark-light border-t border-av-gold/20">
             <div class="px-4 py-3 space-y-2">
+                <a href="index.html" class="block text-gray-300 hover:text-av-gold py-2">Home</a>
                 <a href="features.html" class="block text-gray-300 hover:text-av-gold py-2">Features</a>
                 <a href="pricing.html"  class="block text-gray-300 hover:text-av-gold py-2">Pricing</a>
                 <a href="download.html" class="block text-gray-300 hover:text-av-gold py-2">Download</a>
