--- a/download.html
+++ b/download.html
@@ -53,8 +53,9 @@
     <nav class="bg-av-dark border-b border-av-gold/20 sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
-                <div class="flex items-center"><a href="index.html" class="flex items-center gap-3"><img src="img/av-logo-new.png" alt="Arsenal Vault" class="h-10"></a></div>
+                <div class="flex items-center"><a href="index.html" class="flex items-center gap-3"><img src="img/av-logo-new.png" alt="Arsenal Vault" class="h-10"><span class="text-av-gold font-display font-bold text-xl">Arsenal Vault</span></a></div>
                 <div class="hidden md:flex items-center gap-8">
+                    <a href="index.html" class="nav-link text-gray-300 hover:text-av-gold transition font-medium">Home</a>
                     <a href="features.html" class="nav-link text-gray-300 hover:text-av-gold transition font-medium">Features</a>
                     <a href="pricing.html" class="nav-link text-gray-300 hover:text-av-gold transition font-medium">Pricing</a>
                     <a href="download.html" class="nav-link text-av-gold font-medium">Download</a>
@@ -65,7 +66,8 @@
             </div>
         </div>
         <div id="mobile-menu" class="hidden md:hidden bg-av-dark-light border-t border-av-gold/20 px-4 py-3 space-y-2">
-            <a href="features.html" class="block text-gray-300 hover:text-av-gold py-2">Features</a>
+            <a href="index.html" class="block text-gray-300 hover:text-av-gold py-2">Home</a>
+                <a href="features.html" class="block text-gray-300 hover:text-av-gold py-2">Features</a>
             <a href="pricing.html" class="block text-gray-300 hover:text-av-gold py-2">Pricing</a>
             <a href="download.html" class="block text-av-gold py-2">Download</a>
             <a href="support.html" class="block text-gray-300 hover:text-av-gold py-2">Support</a>
