--- a/pricing.html
+++ b/pricing.html
@@ -43,7 +43,7 @@
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
                     <a href="index.html" class="flex items-center gap-3">
-                        <img src="img/av-logo-new.png" alt="Arsenal Vault" class="h-10"><span class="text-av-gold font-display font-bold text-xl">Arsenal Vault</span>
+                        <img src="img/av-logo.png" alt="Arsenal Vault" class="h-10"><span class="text-av-gold font-display font-bold text-xl">Arsenal Vault</span>
                     </a>
                 </div>
                 <div class="hidden md:flex items-center gap-8">
@@ -365,7 +365,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="flex items-center gap-3 mb-4 md:mb-0">
-                    <img src="img/av-logo-new.png" alt="Arsenal Vault" class="h-8">
+                    <img src="img/av-logo.png" alt="Arsenal Vault" class="h-8">
                 </div>
                 <p class="text-gray-500 text-sm">&copy; 2026 Arsenal Vault. All rights reserved.</p>
             </div>
