Fix logo aspect ratio — remove forced width

--- a/legal.html
+++ b/legal.html
@@ -125,7 +125,7 @@
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
                     <a href="index.html" class="flex items-center gap-3">
-                        <img src="img/av-logo.png" alt="Arsenal Vault" class="h-10 w-10">
+                        <img src="img/av-logo.png" alt="Arsenal Vault" class="h-10">
                         <span class="text-av-gold font-display font-bold text-xl">Arsenal Vault</span>
                     </a>
                 </div>
@@ -330,7 +330,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col md:flex-row justify-between items-center gap-6">
                 <div class="flex items-center gap-3">
-                    <img src="img/av-logo.png" alt="Arsenal Vault" class="h-8 w-8 opacity-80">
+                    <img src="img/av-logo.png" alt="Arsenal Vault" class="h-8 opacity-80">
                     <span class="text-gray-400 font-display font-semibold">Arsenal Vault</span>
                 </div>
                 <div class="flex gap-6 text-sm">
